syntax = "proto3";

package user;

option go_package = "genprotos/user";

// User Service Definition
service UserService {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}


message GetProfileRequest {
  string id =1;
}

message GetProfileResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string phone_number=4;
}

// Update Profile Request and Response
message UpdateProfileRequest {
  string phone_number = 1;
  string email = 2;
  string username =3;
  string id =4;
}

message UpdateProfile {
  string full_name = 1;
  string avatar_url = 2;
}

message UpdateProfileResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string phone_number = 4;
  string updated_at = 5;
}

// Change Password Request and Response
message ChangePasswordRequest {
  string current_password = 1;
  string new_password = 2;
  string id =3;
}
message ChangePassword {
  string current_password = 1;
  string new_password = 2;
}

message ChangePasswordResponse {
  string message = 1;
}



